output file of categories

--- a/jin/DRforBrand/DRforBrand.xcodeproj/xcshareddata/xcschemes/DRforBrand Release.xcscheme
+++ b/jin/DRforBrand/DRforBrand.xcodeproj/xcshareddata/xcschemes/DRforBrand Release.xcscheme
@@ -63,7 +63,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--args --arguments samsungusa samsungbrasil 35"
+            argument = "--args --arguments rei thenorthface 12"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
