more evenly distribute images from both accounts + start tracking classifiers

--- a/jin/DRforBrand/DRforBrand.xcodeproj/xcshareddata/xcschemes/DRforBrand Release.xcscheme
+++ b/jin/DRforBrand/DRforBrand.xcodeproj/xcshareddata/xcschemes/DRforBrand Release.xcscheme
@@ -63,7 +63,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--args --arguments rei thenorthface 35"
+            argument = "--args --arguments vinfarrell daveedwardss 45"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
